# public/swagger.json
@@ -6,7 +6,41 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"PingResponse": {
+			"ShoppingListItem": {
+				"properties": {
+					"label": {
+						"type": "string"
+					},
+					"_id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"label",
+					"_id"
+				],
+				"type": "object"
+			},
+			"Pick_ShoppingListItem.Exclude_keyofShoppingListItem._id__": {
+				"properties": {
+					"label": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"label"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_ShoppingListItem._id_": {
+				"$ref": "#/components/schemas/Pick_ShoppingListItem.Exclude_keyofShoppingListItem._id__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"NewShoppingListItem": {
+				"$ref": "#/components/schemas/Omit_ShoppingListItem._id_"
+			},
+			"ErrorMessage": {
 				"properties": {
 					"message": {
 						"type": "string"
@@ -15,8 +49,7 @@
 				"required": [
 					"message"
 				],
-				"type": "object",
-				"additionalProperties": false
+				"type": "object"
 			}
 		},
 		"securitySchemes": {}
@@ -32,23 +65,97 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/ping": {
+		"/shopping": {
 			"get": {
-				"operationId": "GetMessage",
+				"operationId": "GetItems",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/PingResponse"
+									"items": {
+										"$ref": "#/components/schemas/ShoppingListItem"
+									},
+									"type": "array"
 								}
 							}
 						}
 					}
 				},
+				"tags": [
+					"shopping"
+				],
 				"security": [],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "AddItem",
+				"responses": {
+					"201": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ShoppingListItem"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"shopping"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/NewShoppingListItem"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/shopping/{itemId}": {
+			"delete": {
+				"operationId": "DeleteItem",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/ShoppingListItem"
+										},
+										{
+											"$ref": "#/components/schemas/ErrorMessage"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"shopping"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "itemId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
