# src/models/shopping.ts
@@ -1,0 +1,6 @@
+export type ShoppingListItem = {
+  _id: string;
+  label: string;
+};
+
+export type NewShoppingListItem = Omit<ShoppingListItem, "_id">;
